Fix .map-point positioning on small screens

--- a/style.less
+++ b/style.less
@@ -13,7 +13,7 @@ html {
     background: @color-background;
     color: black;
     text-align: center;
-    font-family: "Roboto", Helvetica, sans-serif;
+    font-family: @font-stack-main;
 }
 body {
     max-width: 1200px;
@@ -36,7 +36,7 @@ div, img, footer {
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px;
     text-transform: uppercase;
-    font-family: "Roboto Condensed", Helvetica, sans-serif;
+    font-family:@font-stack-highlight;
     font-weight: 300;
 }
 h1 {
@@ -251,27 +251,38 @@ a {
     .map-image {
         display: none;
     }
-
+		body{
+			padding: 20px;
+		}
 
 		.distribution-map {
-		    position: relative;
 		    width: 100%;
 		    padding: 20px;
 		    .box-sizing(border-box);
 		    margin: 0 auto;
+				overflow: hidden;
 		    .map-point {
+						float: left;
 						clear: both;
-						display: block;
-		        outline: none;
+						display: inline-block;
+						padding: 15px;
+						margin-bottom: 20px;
 		        z-index: 0;
 		        position: relative;
 		        width: 100%;
-		        height: auto;
+		        height: 100%;
 		        border: 0;
 		        background: none;
 		        border: @map-dot-size/8 solid @color-highlight-dark;
-						top:0px!important;
-						left:50%!important;
+						// top:0px!important;
+						.transition(none);
+						.transform(none);
+						&:active, &:focus, &.active{
+							.transition(none);
+							.transform(none);
+							width: 100%;
+							height: 100%;
+						}
 		        .content {
 								clear:both;
 		            .opacity(1);
@@ -282,6 +293,7 @@ a {
 								.centered-y{
 									position:relative;
 									clear: both;
+									text-align: left;
 								}
 		        }
 		    }
